--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,23 @@ appdirs==1.4.4
 atomicwrites==1.4.0
 attrs==20.2.0
 black==20.8b1
+certifi==2020.6.20
+chardet==3.0.4
 click==7.1.2
+clickclick==1.2.2
 colorama==0.4.3
+connexion==2.7.0
 Flask==1.1.2
+idna==2.10
+inflection==0.5.1
 iniconfig==1.0.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jsonschema==3.2.0
 MarkupSafe==1.1.1
 more-itertools==8.5.0
 mypy-extensions==0.4.3
+openapi-spec-validator==0.2.9
 packaging==20.4
 pathspec==0.8.0
 pluggy==0.13.1
@@ -18,11 +26,15 @@ pudb==2019.2
 py==1.9.0
 Pygments==2.7.1
 pyparsing==2.4.7
+pyrsistent==0.17.3
 pytest==6.0.2
+PyYAML==5.3.1
 regex==2020.7.14
+requests==2.24.0
 six==1.15.0
 toml==0.10.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
+urllib3==1.25.10
 urwid==2.1.1
 Werkzeug==1.0.1
