--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ PyYAML==5.3.1
 regex==2020.7.14
 requests==2.24.0
 six==1.15.0
+swagger-ui-bundle==0.0.8
 toml==0.10.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
